refactor: refactor other

--- a/datacenter-project/#src/_dedic.html
+++ b/datacenter-project/#src/_dedic.html
@@ -10,51 +10,54 @@
                             сервера, размещенного в нашем дата-центре с гарантированным доступом в сеть Интернет,
                             бесперебойным питанием, кондиционированием, а так же круглосуточной технической поддержкой.
                         </p>
-                        <div class="dedic-table">
-                            <div class="dedicated-table">
-                                <div class="order-form get-data" id="order-form">
-                                    <div class="form-container">
-                                        <div class="constructor">
-                                            <h3>Конфигуратор выделенного сервера</h3>
-                                            <div class="cpu-wrapper">
-                                                <p class="cpu-title">Модель сервера и процессора</p>
-                                                <div class="select-wrapper">
+                       <div class="table">
+                           <div class="table__body table-body__loading"></div>
+                       </div>
+<!--                        <div class="dedic-table">-->
+<!--                            <div class="dedicated-table ">-->
+<!--                                <div class="order-form " id="order-form">-->
+<!--                                    <div class="form-container">-->
+<!--                                        <div class="constructor">-->
+<!--                                            <h3>Конфигуратор выделенного сервера</h3>-->
+<!--                                            <div class="cpu-wrapper">-->
+<!--                                                <p class="cpu-title">Модель сервера и процессора</p>-->
+<!--                                                <div class="select-wrapper">-->
 
-                                                </div>
-                                            </div>
-                                            <div class="ram-wrapper">
-<!--                                                <p class="ram-title">Оперативная память</p>-->
-                                                <div class="ram-container">
-                                                </div>
-                                            </div>
-                                            <div class="hdd-wrapper">
-                                                <div class="radio-container">
-                                                </div>
-                                                <div class="showMore"><span>+ добавить еще диски</span></div>
-                                            </div>
+<!--                                                </div>-->
+<!--                                            </div>-->
+<!--                                            <div class="ram-wrapper">-->
+<!--&lt;!&ndash;                                                <p class="ram-title">Оперативная память</p>&ndash;&gt;-->
+<!--                                                <div class="ram-container">-->
+<!--                                                </div>-->
+<!--                                            </div>-->
+<!--                                            <div class="hdd-wrapper">-->
+<!--                                                <div class="radio-container">-->
+<!--                                                </div>-->
+<!--                                                <div class="showMore"><span>+ добавить еще диски</span></div>-->
+<!--                                            </div>-->
 
-                                        </div>
-                                        <div class="result-order">
-                                            <h3>Итоговая конфигурация</h3>
-                                            <div class="config-server">
+<!--                                        </div>-->
+<!--                                        <div class="result-order">-->
+<!--                                            <h3>Итоговая конфигурация</h3>-->
+<!--                                            <div class="config-server">-->
 
-                                            </div>
-                                            <div class="horizontal-line"></div>
-                                            <div class="server-price"></div>
-                                            <a id="bucket-btn" class="btn-gr-bg put-bucket" target="_blank">
-                                                <span>Добавить в корзину</span></a>
-                                        </div>
-                                    </div>
+<!--                                            </div>-->
+<!--                                            <div class="horizontal-line"></div>-->
+<!--                                            <div class="server-price"></div>-->
+<!--                                            <a id="bucket-btn" class="btn-gr-bg put-bucket" target="_blank">-->
+<!--                                                <span>Добавить в корзину</span></a>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
 
-                                </div>
-                            </div>
-                            <div class="btn-services">
-                                <div class="order-info">
-                                    <p>Под заказ (2-5 рабочих дней) доступны любые конфигурации серверов.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="btn-services">-->
+<!--                                <div class="order-info">-->
+<!--                                    <p>Под заказ (2-5 рабочих дней) доступны любые конфигурации серверов.-->
+<!--                                    </p>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
 
                         <div class="info-services">
                             <p>В абонентскую плату включено:</p>
