--- a/datacenter-project/#src/dedic.html
+++ b/datacenter-project/#src/dedic.html
@@ -30,7 +30,7 @@
                                         бесперебойным питанием, кондиционированием, а так же круглосуточной технической поддержкой.
                                     </p>
                                     <div class="dedic-table">
-                                        <div class="dedicated-table">
+                                        <div class="dedicated-table table__body_loading">
                                             <div class="order-form get-data" id="order-form">
                                                 <div class="form-container">
                                                     <div class="constructor">
