--- a/datacenter-project/#src/backup.html
+++ b/datacenter-project/#src/backup.html
@@ -12,15 +12,16 @@
 </head>
 
 <body>
+
 <div class="wrapper page-wrapper">
     @@include('./components/layout/_header.html')
     <main class="main">
-        <section class="services" id="soft-page">
+        <section class="services" id="other-page">
             <div class="container services__container">
-                <h1 class="services__title">Программное обеспечение - ISPsystem</h1>
+                <h1 class="services__title">Другие услуги - Место под бэкапы</h1>
                 <div class="services__content">
                     <div class="services__wrapper">
-                        @@include('components/services/soft/_isp.html')
+                        @@include('components/services/other/_back-up.html')
                     </div>
                 </div>
             </div>
