--- a/datacenter-project/#src/other.html
+++ b/datacenter-project/#src/other.html
@@ -14,9 +14,8 @@
 <body>
     <div class="wrapper page-wrapper">
         @@include('./components/layout/_header.html')
-
         <main class="main">
-            @@include('_newOther.html')
+            @@include('./components/services/other/_other.html')
         </main>
          @@include('./components/layout/_footer.html')
           @@include('./components/layout/_footer-mob.html')
