feat: add all rent server's pages

--- a/datacenter-project/#src/dedic.html
+++ b/datacenter-project/#src/dedic.html
@@ -22,7 +22,6 @@
                 <div class="services__content">
                     <div class="services__wrapper">
                         @@include('./components/services/dedic/_dedic.html')
-
                      </div>
                 </div>
             </div>
@@ -33,7 +32,7 @@
 </div>
 
 <script src="js/swiped-events.min.js"></script>
-<script src="js/script.js"></script>
+<script src="js/script.min.js"></script>
 
 </body>
 
