--- a/datacenter-project/#src/dedicated.html
+++ b/datacenter-project/#src/dedicated.html
@@ -16,7 +16,7 @@
     <div class="wrapper page-wrapper">
         @@include('./components/layout/_header.html')
         <main class="main">
-<!--            @@include('./components/services/dedic/_dedic.html')-->
+            @@include('./components/services/dedic/_dedicated.html')
         </main>
          @@include('./components/layout/_footer.html')
           @@include('./components/layout/_footer-mob.html')
