feat: add instruction page

--- a/datacenter-project/#src/article6.html
+++ b/datacenter-project/#src/article6.html
@@ -1,30 +1,30 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!--<!DOCTYPE html>-->
+<!--<html lang="ru">-->
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.min.css">
-    <link rel="icon" href="img/logo/favicon.ico">
-    <title>Установка ISPmanager Lite : Дата-центр Датахата</title>
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta http-equiv="X-UA-Compatible" content="IE=edge">-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+<!--    <link rel="stylesheet" href="css/style.min.css">-->
+<!--    <link rel="icon" href="img/logo/favicon.ico">-->
+<!--    <title>Установка ISPmanager Lite : Дата-центр Датахата</title>-->
 
-</head>
+<!--</head>-->
 
-<body>
-    <div class="wrapper page-wrapper">
-        @@include('./components/layout/_header.html')
-        <main class="main">
-            @@include('./components/articles/_article6.html')
+<!--<body>-->
+<!--    <div class="wrapper page-wrapper">-->
+<!--        @@include('./components/layout/_header.html')-->
+<!--        <main class="main">-->
+<!--            @@include('./components/articles/_article6.html')-->
 
-        </main>
-         @@include('./components/layout/_footer.html')
-          @@include('./components/layout/_footer-mob.html')
-    </div>
+<!--        </main>-->
+<!--         @@include('./components/layout/_footer.html')-->
+<!--          @@include('./components/layout/_footer-mob.html')-->
+<!--    </div>-->
 
 
-    <script src="js/swiped-events.min.js"></script>
-    <script src="js/script.min.js"></script>
-</body>
+<!--    <script src="js/swiped-events.min.js"></script>-->
+<!--    <script src="js/script.min.js"></script>-->
+<!--</body>-->
 
-</html>
+<!--</html>-->
