--- a/datacenter-project/#src/instruction.html
+++ b/datacenter-project/#src/instruction.html
@@ -16,8 +16,7 @@
         @@include('./components/layout/_header.html')
 
         <main class="main">
-
-            @@include('_instruction.html')
+            @@include('./components/for-clients/_instruction.html')
         </main>
          @@include('./components/layout/_footer.html')
           @@include('./components/layout/_footer-mob.html')
