--- a/datacenter-project/#src/partners.html
+++ b/datacenter-project/#src/partners.html
@@ -17,7 +17,7 @@
         @@include('./components/layout/_header.html')
 
         <main class="main">
-            @@include('_newpartners.html')
+            @@include('./components/info/_newpartners.html')
         </main>
          @@include('./components/layout/_footer.html')
           @@include('./components/layout/_footer-mob.html')
