--- a/datacenter-project/#src/payments.html
+++ b/datacenter-project/#src/payments.html
@@ -16,7 +16,7 @@
         @@include('./components/layout/_header.html')
 
         <main class="main">
-            @@include('_payments.html')
+            @@include('./components/for-clients/_payments.html')
         </main>
          @@include('./components/layout/_footer.html')
           @@include('./components/layout/_footer-mob.html')
