--- a/datacenter-project/#src/visited.html
+++ b/datacenter-project/#src/visited.html
@@ -15,7 +15,7 @@
     <div class="wrapper page-wrapper">
         @@include('./components/layout/_header.html')
         <main class="main">
-            @@include('_visited.html')
+            @@include('./components/for-clients/_visited.html')
         </main>
          @@include('./components/layout/_footer.html')
           @@include('./components/layout/_footer-mob.html')
