--- a/datacenter-project/#src/document.html
+++ b/datacenter-project/#src/document.html
@@ -16,7 +16,7 @@
         @@include('./components/layout/_header.html')
 
         <main class="main">
-            @@include('_document.html')
+            @@include('./components/for-clients/_document.html')
         </main>
          @@include('./components/layout/_footer.html')
           @@include('./components/layout/_footer-mob.html')
