--- a/datacenter-project/#src/support.html
+++ b/datacenter-project/#src/support.html
@@ -14,7 +14,7 @@
         @@include('./components/layout/_header.html')
     
         <main class = "main">
-            @@include('_support.html')
+            @@include('./components/for-clients/_support.html')
         </main>
          @@include('./components/layout/_footer.html')
           @@include('./components/layout/_footer-mob.html')
