refactor: refactor image^ title

--- a/datacenter-project/#src/ddos.html
+++ b/datacenter-project/#src/ddos.html
@@ -25,11 +25,11 @@
                                 <h2 class="subtitle-section">Защита от DDoS атак</h2>
                                 <p class="panel-text">Компания Датахата предлагает своим клиентам защиту от DDoS-атак на
                                     базе сервиса StormWall.pro</p>
-                                <p class="text">По умолчанию, если ваш IP-адрес подвергается атаке – наша система защиты
+                                <p class="paragraph">По умолчанию, если ваш IP-адрес подвергается атаке – наша система защиты
                                     просто заблокирует его по технологии BGP Blackhole у вышестоящих провайдеров, убрав
                                     таким образом воздействие DDoS-атаки на других клиентов. При этом, ваш IP-адрес, на
                                     который совершается атака, будет недоступен до окончания этой атаки.</p>
-                                <p class="text">Сервис по защите от DDoS минимизирует влияние атак, обеспечивая
+                                <p class="paragraph">Сервис по защите от DDoS минимизирует влияние атак, обеспечивая
                                     постоянную доступность всей вашей серверной инфраструктуры и онлайн-ресурсов.
                                     Непрерывный анализ трафика, оповещения о возможных атаках, перенаправление трафика в
                                     центры очистки и возврат очищенного трафика в сеть, – решение включает все
