--- a/datacenter-project/#src/dedic.html
+++ b/datacenter-project/#src/dedic.html
@@ -16,9 +16,9 @@
 <div class="wrapper page-wrapper">
     @@include('./components/layout/_header.html')
     <main class="main">
-        <section class="services" id="server-page">
+        <section class="services section-padding" id="server-page">
             <div class="container services__container">
-                <h1 class="services__title">Dedicated server в ЦОД ДатаХата</h1>
+                <h1 class="title">Dedicated server в ЦОД ДатаХата</h1>
                 <div class="services__content">
                     <div class="services__wrapper">
                         @@include('./components/services/dedic/_dedic.html')
