--- a/datacenter-project/#src/tower.html
+++ b/datacenter-project/#src/tower.html
@@ -14,9 +14,9 @@
 <div class="wrapper page-wrapper">
     @@include('./components/layout/_header.html')
     <main class="main">
-        <section class="services">
+        <section class="services section-padding">
             <div class="container services__container">
-                <h1 class="services__title">Размещение серверного <br> оборудования - В башенных корпусах</h1>
+                <h1 class="title">Размещение серверного <br> оборудования - В башенных корпусах</h1>
                 <div class="services__content" id="towerServer">
                     @@include('components/services/colo/tower/_tower-wrapper.html')
                 </div>
