--- a/datacenter-project/#src/onlyoffice.html
+++ b/datacenter-project/#src/onlyoffice.html
@@ -16,9 +16,9 @@
 <div class="wrapper page-wrapper">
     @@include('./components/layout/_header.html')
     <main class="main">
-        <section class="services">
+        <section class="services section-padding">
             <div class="container services__container">
-                <h1 class="services__title">Программное обеспечение - OnlyOffice</h1>
+                <h1 class="title">Программное обеспечение - OnlyOffice</h1>
                 <div class="services__content">
                     <div class="services__wrapper">
                         @@include('components/services/soft/_only-office.html')
