--- a/datacenter-project/#src/rack.html
+++ b/datacenter-project/#src/rack.html
@@ -13,9 +13,9 @@
     <div class="wrapper page-wrapper">
         @@include('./components/layout/_header.html')
         <main class="main">
-            <section class="services">
+            <section class="services section-padding">
                 <div class="container services__container">
-                    <h1 class="services__title">Размещение серверного <br> оборудования - Аренда стойки</h1>
+                    <h1 class="title">Размещение серверного <br> оборудования - Аренда стойки</h1>
                     <div class="services__content">
                         <div class="services__wrapper">
                             @@include('components/services/colo/rent-rack/_rent-rack.html')
