--- a/datacenter-project/#src/server.html
+++ b/datacenter-project/#src/server.html
@@ -17,9 +17,9 @@
         @@include('./components/layout/_header.html')
 
         <main class="main">
-            <section class="services">
+            <section class="services section-padding">
                 <div class="container services__container">
-                    <h1 class="services__title">Купить сервер</h1>
+                    <h1 class="title">Купить сервер</h1>
                     <div class="services__content">
                         <div class="services__wrapper">
                             @@include('components/services/dedic/_buy-server.html')
