--- a/datacenter-project/#src/soft.html
+++ b/datacenter-project/#src/soft.html
@@ -15,9 +15,9 @@
 <div class="wrapper page-wrapper">
     @@include('./components/layout/_header.html')
     <main class="main">
-        <section class="services" id="soft-page">
+        <section class="services section-padding" id="soft-page">
             <div class="container services__container">
-                <h1 class="services__title">Программное обеспечение - ISPsystem</h1>
+                <h1 class="title">Программное обеспечение - ISPsystem</h1>
                 <div class="services__content">
                     <div class="services__wrapper">
                         @@include('components/services/soft/_isp.html')
