--- a/datacenter-project/#src/ssl.html
+++ b/datacenter-project/#src/ssl.html
@@ -16,9 +16,9 @@
     <div class="wrapper page-wrapper">
         @@include('./components/layout/_header.html')
         <main class="main">
-            <section class="services" id="other-page">
+            <section class="services section-padding" id="other-page">
                 <div class="container services__container">
-                    <h1 class="services__title">Другие услуги - SSL-сертификаты</h1>
+                    <h1 class="title">Другие услуги - SSL-сертификаты</h1>
                     <div class="services__content">
                         <div class="services__wrapper">
                             @@include('components/services/other/_ssl.html')
